--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,7 @@ h6 {
 .navbar .active {
 	color: #ffbd59 !important;
 }
-.navbar .navbar-brand {
-}
+
 .navbar .nav-item {
 	margin: 0 5px;
 	padding: 0;
@@ -298,8 +297,7 @@ h6 {
 .single-feature p {
 	font-size: 13px;
 }
-.icon-border {
-}
+
 .icon-border span {
 	display: block;
 	position: relative;
@@ -334,6 +332,7 @@ h6 {
 	padding:100px 0px;
 	position:relative;
 }
+
 .testimonial::before {
 	content: "";
 	display: block;
@@ -344,12 +343,14 @@ h6 {
 	height: 100%;
 	background: url(images/pattern.png);
 }
+
 .bx-prev {
 	left: -90px !important;
 	background: url(images/arrow-left.png) no-repeat !important;
 	background-size: auto auto !important;
 	background-size: 100% 100% !important;
 }
+
 .bx-next {
 	right: -90px !important;
 	background: url(images/arrow-right.png) no-repeat !important;
@@ -362,20 +363,24 @@ h6 {
 	border-radius: 5px !important;
 	box-shadow:none !important;
 }
+
 .slider-item {
 	padding:20px;
 }
+
 .slider .test-img img {
 	border: 12px solid #fff;
 	border-radius: 50%;
 	width: 100%;
 	height: auto;
 }
+
 .test-img {
 	float: left;
 	width: 20%;
 	margin-right:5%;
 }
+
 .test-text {
 	float: left;
 	width: 75%;
@@ -387,11 +392,13 @@ h6 {
 	font-size: 1.125em;
 	line-height: 1.25;
 }
+
 .slider .title span {
 	display: block;
 	font-size: 1.5em;
 	font-weight: 700;
 }
+
 .faq {
 	background: #fafafa;
 	border-bottom: 1px solid #e4e4e4;
@@ -403,6 +410,7 @@ h6 {
 	font-weight: 400;
 	font-size: 20px;
 }
+
 .faq-content p {
 	color: #818992;
 	font-weight:300;
@@ -411,6 +419,7 @@ h6 {
 #contact_form .form-input {
 	border: 1px solid #e4e4e4;
 }
+
 input {
 	height: 42px;
 	padding: 0 1rem;
@@ -423,6 +432,7 @@ input {
 	transition: all 0.3s ease-in-out;
 	border:0;
 }
+
 #contact_form textarea {
 	resize: none;
 	padding: 1rem;
@@ -436,6 +446,7 @@ input {
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 }
+
 .btn-grad {
  padding: .7rem 2rem;
 	display: inline-block;
@@ -452,11 +463,11 @@ input {
 	background: #7a60ff;
 	background: linear-gradient(to left, #036, #000);
 
-	/* background: linear-gradient(to left, #036, #000); */
 }
 .contact-item {
 	margin:23px 0px;
 }
+
 .contact-item i {
 	font-size: 20px;
 }
@@ -495,6 +506,7 @@ input {
 	width: 150px;
 	border-radius: 7px;
 }
+
 .footer-copy {
 	background: #ffffff;
 	color: #242424;
@@ -562,12 +574,15 @@ h3 {
 	margin-bottom: 20px;
 	margin-top: 20px;
 }
+
 .team-detail {
 	margin-top: 20px;
 }
+
 .team-detail img {
 	width: 50%;
 }
+
 .bx-controls
 {
 	display:none;
@@ -624,8 +639,15 @@ h3 {
     padding: 10px 30px ;
     border-radius: 15px;
 }
+
 .btn_Read_more:hover{
     color: #fff;
 	background: linear-gradient(to left, #036, #000);
-border: 1px solid#fff;
+    border: 1px solid#fff;
 }
+.btn_Read_more{
+	position: relative;
+	left: -111px;
+	bottom: -25px;
+}
+
