--- a/css/style.css
+++ b/css/style.css
@@ -152,10 +152,10 @@ h6 {
 	position:relative
 }
 .section-padding {
-	padding:80px 0px;
+	padding:30px 0px;
 }
 .sectioner-header {
-	width:69%;
+	width:100%;
 	margin:0 auto;
 }
 .line {
@@ -479,7 +479,7 @@ input {
 	background: #7a60ff;
 	background: linear-gradient(to left, #036, #000);
 	/* background: linear-gradient(to left, #036, #000); */
-	padding:100px 0px;
+	padding:50px 0px;
 	position:relative;
 }
 .download::before {
@@ -496,11 +496,13 @@ input {
 	list-style: none;
 }
 .download ul li {
-	display: inline-block;
+	display: block;
 	margin: 0px 10px 10px 0px;
+	text-align: center;
 }
 .download ul li a {
 	display: block;
+	color: #fff;
 }
 .download ul li a img {
 	width: 150px;
@@ -651,3 +653,72 @@ h3 {
 	bottom: -25px;
 }
 
+
+
+
+.card{
+	padding: 0 !important;
+	border-radius: 12px;
+}
+.card a {
+	padding: 5px;
+	border-radius: 20px;
+	display: block;
+  }
+
+  .card_body {
+	width: 100%;
+	padding: 0 15px 15px 15px;
+  }
+  .card_body_each {
+	width: 100%;
+	float: left;
+  }
+  .card_body_each_a {
+	color: #001828;
+	font-size: 18px;
+	text-align: left;
+  }
+  .card a img {
+	max-width: 100%;
+	background: content-box;
+	border-radius: 10px;
+	border: 1px solid;
+  }
+  .card_body_each_a a span {
+	color: #036;
+	font-size: 20px;
+	font-weight: 600;
+	height: 50px;
+	box-sizing: border-box;
+	overflow: hidden;
+	word-wrap: break-word;
+	word-break: break-word;
+	transition: .15s ease-in-out;
+	display: block;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+  }
+  .card_body p {
+	float: left;
+	width: 100%;
+	height: 100px;
+	overflow: hidden;
+  }
+  .btn_visit_w {
+	color: #fff !important;
+	float: left;
+	width: 100%;
+	padding: 5px 5px;
+	font-size: 14px;
+	border-radius: 50px !important;
+	border: 1px solid transparent;
+	background-color: #001828;
+	background-image: linear-gradient(120deg, #000, #036);
+	/* background-image: linear-gradient(159deg, #243b4a, #2a2d3c); */
+	/* box-shadow: inset -1px -1px 10px 0 rgba(32, 27, 61, 0.93), inset 1px 1px 3px 0 rgb(47, 53, 71), 1px 1px 2px 0 #000410; */
+  }
+  img{
+	max-width: 100%;
+  }
