--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,8 @@ h6 {
 	display: none;
 }
 .nav-scroll {
-	background: linear-gradient(to left, #036, #000);
+	/* background: linear-gradient(to left, #036, #000); */
+	background: linear-gradient(to left, #4cccd9, #464a58);
 
 	/* background: #fff; */
 	-webkit-box-shadow: 0 1px 8px 3px rgba(0, 0, 0, 0.0509803922);
@@ -100,8 +101,8 @@ h6 {
 .banner {
 	/* background: #7a60ff; */
 	/* background: linear-gradient(to left, #036, #000); */
-	background: linear-gradient(to left, #036, #000);
-
+	/* background: linear-gradient(to left, #036, #000); */
+	background: linear-gradient(to left, #4cccd9, #464a58);
 	padding:100px 0px;
 	position:relative;
 }
@@ -193,7 +194,7 @@ h6 {
 	height: 135px;
 	border-radius: 100px;
 	background: #7a60ff;
-	background: linear-gradient(to left, #036, #000);
+	background: linear-gradient(to left, #4cccd9, #464a58);
 	color: #ffffff;
 	font-size: 50px;
 	line-height: 135px;
@@ -461,7 +462,7 @@ input {
 	padding: 2rem 2rem 1rem;
 	border-radius: 8px;
 	background: #7a60ff;
-	background: linear-gradient(to left, #036, #000);
+	background: linear-gradient(to left, #4cccd9, #464a58);
 
 }
 .contact-item {
@@ -477,7 +478,7 @@ input {
 }
 .download {
 	background: #7a60ff;
-	background: linear-gradient(to left, #036, #000);
+	background: linear-gradient(to left, #4cccd9, #464a58);
 	/* background: linear-gradient(to left, #036, #000); */
 	padding:50px 0px;
 	position:relative;
@@ -500,6 +501,7 @@ input {
 	margin: 0px 10px 10px 0px;
 	text-align: center;
 }
+
 .download ul li a {
 	display: block;
 	color: #fff;
@@ -595,6 +597,7 @@ h3 {
 .slider .test-img img {
 	margin: 0 auto;
 }
+
 .test-img {
 	float:none;
 	width: 200px;
@@ -612,6 +615,7 @@ h3 {
 .faq-content {
 	margin: 10px 0px;
 }
+
 .faq-content h4 {
 	font-size: 16px;
 }
@@ -624,6 +628,7 @@ h3 {
 .contact-item {
 	font-size: 12px;
 }
+
 .download ul li a img {
 	width: 120px;
 }
@@ -634,7 +639,7 @@ h3 {
 
 .btn_Read_more{
     display: inline-block;
-    color: #036;
+    color: #4cccd9;
     background: #fff;
     border: 1px solid ;
     font-weight: 700;
@@ -644,7 +649,7 @@ h3 {
 
 .btn_Read_more:hover{
     color: #fff;
-	background: linear-gradient(to left, #036, #000);
+	background: linear-gradient(to left, #4cccd9, #464a58);
     border: 1px solid#fff;
 }
 .btn_Read_more{
@@ -686,7 +691,7 @@ h3 {
 	border: 1px solid;
   }
   .card_body_each_a a span {
-	color: #036;
+	color: #4cccd9;
 	font-size: 20px;
 	font-weight: 600;
 	height: 50px;
@@ -703,7 +708,7 @@ h3 {
   .card_body p {
 	float: left;
 	width: 100%;
-	height: 100px;
+	height: 106px;
 	overflow: hidden;
   }
   .btn_visit_w {
@@ -715,7 +720,8 @@ h3 {
 	border-radius: 50px !important;
 	border: 1px solid transparent;
 	background-color: #001828;
-	background-image: linear-gradient(120deg, #000, #036);
+	
+	background-image: linear-gradient(120deg, #464a58, #4cccd9);
 	/* background-image: linear-gradient(159deg, #243b4a, #2a2d3c); */
 	/* box-shadow: inset -1px -1px 10px 0 rgba(32, 27, 61, 0.93), inset 1px 1px 3px 0 rgb(47, 53, 71), 1px 1px 2px 0 #000410; */
   }
