--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,8 @@ h6 {
 	display: none;
 }
 .nav-scroll {
-	/* background: linear-gradient(to left, #036, #000); */
-	background: linear-gradient(to left, #4cccd9, #464a58);
+	background: linear-gradient(to left, #036, #000);
+	/* background: linear-gradient(to left, #4cccd9, #464a58); */
 
 	/* background: #fff; */
 	-webkit-box-shadow: 0 1px 8px 3px rgba(0, 0, 0, 0.0509803922);
@@ -194,7 +194,7 @@ h6 {
 	height: 135px;
 	border-radius: 100px;
 	background: #7a60ff;
-	background: linear-gradient(to left, #4cccd9, #464a58);
+	background: linear-gradient(to left, #036, #000);
 	color: #ffffff;
 	font-size: 50px;
 	line-height: 135px;
@@ -462,7 +462,7 @@ input {
 	padding: 2rem 2rem 1rem;
 	border-radius: 8px;
 	background: #7a60ff;
-	background: linear-gradient(to left, #4cccd9, #464a58);
+	background: linear-gradient(to left, #036, #000);
 
 }
 .contact-item {
@@ -478,7 +478,7 @@ input {
 }
 .download {
 	background: #7a60ff;
-	background: linear-gradient(to left, #4cccd9, #464a58);
+	background: linear-gradient(to left, #036, #000);
 	/* background: linear-gradient(to left, #036, #000); */
 	padding:50px 0px;
 	position:relative;
@@ -639,7 +639,7 @@ h3 {
 
 .btn_Read_more{
     display: inline-block;
-    color: #4cccd9;
+    color: #036;
     background: #fff;
     border: 1px solid ;
     font-weight: 700;
@@ -649,7 +649,7 @@ h3 {
 
 .btn_Read_more:hover{
     color: #fff;
-	background: linear-gradient(to left, #4cccd9, #464a58);
+	background: linear-gradient(to left, #036, #000000);
     border: 1px solid#fff;
 }
 .btn_Read_more{
@@ -691,7 +691,7 @@ h3 {
 	border: 1px solid;
   }
   .card_body_each_a a span {
-	color: #4cccd9;
+	color: #036;
 	font-size: 20px;
 	font-weight: 600;
 	height: 50px;
@@ -720,11 +720,25 @@ h3 {
 	border-radius: 50px !important;
 	border: 1px solid transparent;
 	background-color: #001828;
-	
-	background-image: linear-gradient(120deg, #464a58, #4cccd9);
+	background-image: linear-gradient(120deg, #000, #036);
 	/* background-image: linear-gradient(159deg, #243b4a, #2a2d3c); */
 	/* box-shadow: inset -1px -1px 10px 0 rgba(32, 27, 61, 0.93), inset 1px 1px 3px 0 rgb(47, 53, 71), 1px 1px 2px 0 #000410; */
   }
+  .btn_visit_w:hover {
+	color: #fff !important;
+	float: left;
+	width: 100%;
+	padding: 5px 5px;
+	font-size: 14px;
+	border-radius: 50px !important;
+	border: 1px solid transparent;
+	background-color: #001828;
+	text-decoration: none;
+	background-image: linear-gradient(120deg, #036, #000);
+	/* background-image: linear-gradient(159deg, #243b4a, #2a2d3c); */
+	/* box-shadow: inset -1px -1px 10px 0 rgba(32, 27, 61, 0.93), inset 1px 1px 3px 0 rgb(47, 53, 71), 1px 1px 2px 0 #000410; */
+  }
+
   img{
 	max-width: 100%;
   }
